# tfam

./: Cargo.toml  README.md
src/: interm.rs  lib.rs  machine.rs  maps.rs  next.rs  nextstate.rs  nterm.rs  sd.rs  sdata.rs  sdopt.rs  seq.rs  transforms.rs  transition.rs  updates.rs
src/next/: term.rs
src/nextstate/: ns.rs  opt.rs  res.rs  term.rs  tests.rs  update.rs
src/nextstate/res/: froms.rs
src/nextstate/term/: froms.rs
src/seq/: endless.rs  finite.rs  next.rs  sdopt.rs  sdterm.rs  term.rs  terminating.rs
src/seq/endless/: next.rs
src/seq/term/: next.rs
src/updates/: opt.rs  res.rs  term.rs  tests.rs  up.rs
src/updates/res/: froms.rs
src/updates/term/: froms.rs
tests/: parsequeue.rs  termseq.rs
